testsuite/gnatprove/tests/1167__destructors/test.out
test.adb:8:12: error: record type with a destructor is not yet supported
test.adb:21:16: error: "T1" is not allowed in SPARK (due to record type with a destructor)
test.adb:21:16: error: violation of aspect SPARK_Mode at line 5
gnatprove: error during flow analysis and proof
